// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SafeAreaView can override padding styles 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 4,
          "paddingLeft": 2,
          "paddingRight": 3,
          "paddingTop": 1,
        },
        Object {
          "paddingTop": 0,
        },
      ]
    }
  >
    <View />
  </View>
</RNCSafeAreaView>
`;

exports[`SafeAreaView renders 1`] = `
<RNCSafeAreaView
  onInsetsChange={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 4,
          "paddingLeft": 2,
          "paddingRight": 3,
          "paddingTop": 1,
        },
        undefined,
      ]
    }
  >
    <View />
  </View>
</RNCSafeAreaView>
`;
